<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wonderful</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="has_volume">has volume</string>
    <string name="need_repeat">need repeat</string>
    <string name="hold_shake_change">hold shake change wallpaper</string>

    <!-- 
    public static final String LABEL_NBA = "NBA";
    public static final String LABEL_SOCCER = "Soccer";
    public static final String LABEL_MUSIC = "Music";
    public static final String LABEL_PICTURE = "Picture";
    public static final String LABEL_GAME = "Game";
     -->
    <!-- online general -->
    <string name="category_nba">NBA</string>
    <string name="category_soccer">Soccer</string>
    <string name="category_music">Music</string>
    <string name="category_picture">Picture</string>
    <string name="category_game">Game</string>
    <!-- online user -->
    <string name="category_collected">Collected</string>
    <string name="category_history">History</string>
    <!-- disk -->
    <string name="category_saved">Saved</string>
    
    <!-- content group -->
    <string name="group_latest">Latest</string>
    <string name="group_hot">Hot</string>
    <string name="group_top">Top</string>
    <string name="group_recommended">Recommended</string>

    <string name="drawer_open">drawerOpen</string>
    <string name="drawer_close">drawerClose</string>

    <string name="download_before_display">Please download video, then display</string>
    <string name="download_before_set">Please download video, then set as lock wallpaper</string>
    <string name="set_lock_video_successful">Set video as lock wallpaper successful</string>
    <string name="set_lock_album_successful">Set album as lock video wallpaper successful</string>
    
    <string name="set_as_wallpaper">setAsWallpaper</string>
    <string name="settings">settings</string>
    
    <!-- video actions -->
    <string name="collect">collect</string>
    <string name="download">download</string>
    <string name="full">full</string>
    <string name="download_all">DownloadAll</string>
    <string name="setalbumaswallpaper">SetAsLockVideo</string>
    <string name="repeatonce">RepeatOnce</string>
    
    <!-- full actions -->
    <string name="mute">mute</string>
    <string name="repeat">repeat</string>
    <string name="setAsWallpaper">setAsWallpaper</string>
    <string name="playPrevious">playPrevious</string>
    <string name="playNext">playNext</string>
    
    <string name="displayFull">displayFull</string>
</resources>
