<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wonderful="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.demolivewallpaper.MainActivity" >

    <item 
        android:id="@+id/collect_video_menu"
        android:orderInCategory="40"
        android:icon="@drawable/ic_repeat_one_white_48dp"
        android:title="@string/collect"
        />
    <item 
        android:id="@+id/download_view_menu"
        android:orderInCategory="50"
        android:icon="@drawable/ic_volume_up_white_48dp"
        android:title="@string/download"
        />
    <item
        android:id="@+id/display_repeat_once"
        android:orderInCategory="60"
        android:icon="@drawable/ic_play_arrow_white_48dp"
        android:title="@string/repeatonce"
        />
    <item 
        android:id="@+id/set_video_menu"
        android:orderInCategory="70"
        android:icon="@drawable/ic_fingerprint_white_48dp"
        android:title="@string/setAsWallpaper"
        />
</menu>