<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff8b1a1a"
     >

    <!-- setAlbumAsWallpaper repeat mute  -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <!-- download all -->
        <Button 
            android:id="@+id/download_album_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="#000"
            android:text="@string/download_all"
            android:onClick="downloadAll"
            />
        <Button 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/setalbumaswallpaper"
            android:onClick="setAlbumAsWallpaper"
            />
        <!-- remove 2 item -->
        <Button 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/repeatonce"
            android:onClick="repeatOnce"
            android:visibility="gone"
            />
        <Button 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/mute"
            android:onClick="mute"
            />
    </LinearLayout>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/album_video_list"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="#ff000000"
        android:layout_height="0dp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:background="#ff8b1a1a"
        android:visibility="gone"
        android:orientation="horizontal"
        >
        <!-- show downloaded count -->
        <TextView 
            android:id="@+id/doenloaded_video_counter"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:textColor="#f00"
            android:gravity="center"
            android:textSize="18sp"
            />
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ff8b1a1a"
            />
        <!-- show downloaded progress -->
        <!-- add progress in code -->
        <LinearLayout
            android:id="@+id/downloaded_progresses"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffe0"
            android:orientation="horizontal"
            />
    </LinearLayout>

</LinearLayout>